Implement new Graql query: Graql Update