@@ -37,13 +37,13 @@ import graql.lang.query.GraqlDelete;
 import graql.lang.query.GraqlInsert;
 import graql.lang.query.GraqlMatch;
 import graql.lang.query.GraqlUndefine;
+import graql.lang.query.GraqlUpdate;
 
 import static grakn.core.common.exception.ErrorMessage.Server.UNKNOWN_REQUEST_TYPE;
 import static grakn.core.common.iterator.Iterators.iterate;
 import static grakn.core.server.rpc.common.RequestReader.setDefaultOptions;
 import static grakn.core.server.rpc.common.RequestReader.setQueryOptions;
 import static grakn.core.server.rpc.common.ResponseBuilder.Answer.numeric;
-import static java.util.stream.Collectors.toList;
 
 public class QueryHandler {
 
@@ -61,9 +61,6 @@ public class QueryHandler {
         setDefaultOptions(options, req.getOptions());
         setQueryOptions(options, req.getOptions());
         switch (req.getReqCase()) {
-            case DELETE_REQ:
-                this.delete(request, req.getDeleteReq(), options);
-                return;
             case DEFINE_REQ:
                 this.define(request, req.getDefineReq(), options);
                 return;
@@ -82,8 +79,14 @@ public class QueryHandler {
             case MATCH_GROUP_AGGREGATE_REQ:
                 this.match(request, req.getMatchGroupAggregateReq(), options);
                 return;
+            case DELETE_REQ:
+                this.delete(request, req.getDeleteReq(), options);
+                return;
             case INSERT_REQ:
                 this.insert(request, req.getInsertReq(), options);
+                return;
+            case UPDATE_REQ:
+                this.update(request, req.getUpdateReq(), options);
                 return;
             case REQ_NOT_SET:
             default:
@@ -103,8 +106,7 @@ public class QueryHandler {
                 request, answers, context,
                 as -> response(request, QueryProto.Query.Res.newBuilder().setMatchRes(
                         QueryProto.Query.Match.Res.newBuilder().addAllAnswers(
-                                as.stream().map(ResponseBuilder.Answer::conceptMap).collect(toList()))))
-        );
+                                iterate(as).map(ResponseBuilder.Answer::conceptMap).toList()))));
     }
 
     private void match(Transaction.Req request, QueryProto.Query.MatchAggregate.Req req, Options.Query options) {
@@ -113,8 +115,7 @@ public class QueryHandler {
         Numeric answer = queryManager.match(query, context);
         transactionRPC.respond(
                 response(request, QueryProto.Query.Res.newBuilder().setMatchAggregateRes(
-                        QueryProto.Query.MatchAggregate.Res.newBuilder().setAnswer(numeric(answer))))
-        );
+                        QueryProto.Query.MatchAggregate.Res.newBuilder().setAnswer(numeric(answer)))));
     }
 
     private void match(Transaction.Req request, QueryProto.Query.MatchGroup.Req req, Options.Query options) {
@@ -124,44 +125,49 @@ public class QueryHandler {
         transactionRPC.respond(
                 request, answers, context,
                 as -> response(request, QueryProto.Query.Res.newBuilder().setMatchGroupRes(
-                        QueryProto.Query.MatchGroup.Res.newBuilder()
-                                .addAllAnswers(iterate(as).map(ResponseBuilder.Answer::conceptMapGroup).toList()))
-                )
-        );
+                        QueryProto.Query.MatchGroup.Res.newBuilder().addAllAnswers(
+                                iterate(as).map(ResponseBuilder.Answer::conceptMapGroup).toList()))));
     }
 
-    private void match(Transaction.Req request, QueryProto.Query.MatchGroupAggregate.Req req, Options.Query options) {
-        GraqlMatch.Group.Aggregate query = Graql.parseQuery(req.getQuery()).asMatchGroupAggregate();
+    private void match(Transaction.Req txReq, QueryProto.Query.MatchGroupAggregate.Req queryReq, Options.Query options) {
+        GraqlMatch.Group.Aggregate query = Graql.parseQuery(queryReq.getQuery()).asMatchGroupAggregate();
         Context.Query context = new Context.Query(transactionRPC.context(), options.query(query), query);
         ResourceIterator<NumericGroup> answers = queryManager.match(query, context);
         transactionRPC.respond(
-                request, answers, context,
-                as -> response(request, QueryProto.Query.Res.newBuilder().setMatchGroupAggregateRes(
+                txReq, answers, context,
+                as -> response(txReq, QueryProto.Query.Res.newBuilder().setMatchGroupAggregateRes(
                         QueryProto.Query.MatchGroupAggregate.Res.newBuilder().addAllAnswers(
-                                as.stream().map(ResponseBuilder.Answer::numericGroup).collect(toList())
-                        )
-                ))
-        );
+                                iterate(as).map(ResponseBuilder.Answer::numericGroup).toList()))));
     }
 
-    private void insert(Transaction.Req request, QueryProto.Query.Insert.Req req, Options.Query options) {
-        GraqlInsert query = Graql.parseQuery(req.getQuery()).asInsert();
+    private void insert(Transaction.Req txReq, QueryProto.Query.Insert.Req queryReq, Options.Query options) {
+        GraqlInsert query = Graql.parseQuery(queryReq.getQuery()).asInsert();
         Context.Query context = new Context.Query(transactionRPC.context(), options.query(query), query);
         ResourceIterator<ConceptMap> answers = queryManager.insert(query, context);
         transactionRPC.respond(
-                request, answers, context,
-                as -> response(request, QueryProto.Query.Res.newBuilder().setInsertRes(
+                txReq, answers, context,
+                as -> response(txReq, QueryProto.Query.Res.newBuilder().setInsertRes(
                         QueryProto.Query.Insert.Res.newBuilder().addAllAnswers(
-                                as.stream().map(ResponseBuilder.Answer::conceptMap).collect(toList()))))
-        );
+                                iterate(as).map(ResponseBuilder.Answer::conceptMap).toList()))));
     }
 
-    private void delete(Transaction.Req request, QueryProto.Query.Delete.Req req, Options.Query options) {
-        GraqlDelete query = Graql.parseQuery(req.getQuery()).asDelete();
+    private void delete(Transaction.Req txReq, QueryProto.Query.Delete.Req queryReq, Options.Query options) {
+        GraqlDelete query = Graql.parseQuery(queryReq.getQuery()).asDelete();
         Context.Query context = new Context.Query(transactionRPC.context(), options.query(query), query);
         queryManager.delete(query, context);
-        transactionRPC.respond(response(request, QueryProto.Query.Res.newBuilder()
+        transactionRPC.respond(response(txReq, QueryProto.Query.Res.newBuilder()
                 .setDeleteRes(QueryProto.Query.Delete.Res.getDefaultInstance())));
+    }
+
+    private void update(Transaction.Req txReq, QueryProto.Query.Update.Req queryReq, Options.Query options) {
+        GraqlUpdate query = Graql.parseQuery(queryReq.getQuery()).asUpdate();
+        Context.Query context = new Context.Query(transactionRPC.context(), options.query(query), query);
+        ResourceIterator<ConceptMap> answers = queryManager.update(query, context);
+        transactionRPC.respond(
+                txReq, answers, context,
+                as -> response(txReq, QueryProto.Query.Res.newBuilder().setUpdateRes(
+                        QueryProto.Query.Update.Res.newBuilder().addAllAnswers(
+                                iterate(as).map(ResponseBuilder.Answer::conceptMap).toList()))));
     }
 
     private void define(Transaction.Req request, QueryProto.Query.Define.Req req, Options.Query options) {
